--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -5,7 +5,7 @@ import ProjectCard from "./ProjectCard.astro";
 const repos = ["https://api.github.com/repos/pluwshy/personal-website"];
 
 export function getEnv(locals: App.Locals, metaEnv: ImportMetaEnv, name: string) {
-	const env = import.meta.env.PROD ? locals.runtime.env : metaEnv;
+	const env = metaEnv;
 
 	if (!env[name]) throw new Error(`Missing environment variable "${name}"`);
 
