--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,9 +4,6 @@ import { siteConfig, menuLinks } from "@/site-config";
 import ThemeToggle from "../ThemeToggle.astro";
 import { Icon } from "astro-icon/components";
 
-import { Image } from "astro:assets";
-import sharkImg from "/public/shark.gif";
-
 const url = new URL(Astro.request.url);
 ---
 
@@ -16,12 +13,10 @@ const url = new URL(Astro.request.url);
 			aria-current={url.pathname === "/" ? "page" : false}
 			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
 			href="/">
-			<Image
+			<img
 				class="rendering-pixelated me-3 h-10 w-10 sm:absolute sm:start-[-6rem] sm:me-0 sm:h-[4.5rem] sm:w-[4.5rem]"
 				alt="logo"
-				fetchpriority="high"
-				loading="eager"
-				src={sharkImg}
+				src="/shark.gif"
 			/>
 			<div id="dog-cache"></div>
 			<span class="text-xl font-bold sm:text-2xl">{siteConfig.title}</span>
