--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -67,3 +67,5 @@ const socialImageURL = new URL(ogImage ? ogImage : "/thumbnail.png", Astro.url).
 <link href="/rss.xml" rel="alternate" title={siteConfig.title} type="application/rss+xml" />
 
 <meta content={Astro.generator} name="generator" />
+
+<link rel="preload" href="/shark.gif" as="image" />
