--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -4,7 +4,7 @@ import ProjectCard from "./ProjectCard.astro";
 
 const repos = ["https://api.github.com/repos/pluwshy/personal-website"];
 
-export function getEnv(locals: App.Locals, metaEnv: ImportMetaEnv, name: string) {
+export function getEnv(metaEnv: ImportMetaEnv, name: string) {
 	const env = metaEnv;
 
 	if (!env[name]) throw new Error(`Missing environment variable "${name}"`);
