--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -14,8 +14,8 @@ const socialLinks: {
 }[] = [
 	{
 		name: "Github",
-		username: "pluwshy",
-		href: "https://github.com/pluwshy",
+		username: "sharkcafe",
+		href: "https://github.com/sharkcafe",
 		icon: "ri:github-line",
 	},
 	{
@@ -26,14 +26,14 @@ const socialLinks: {
 	},
 	{
 		name: "Telegram",
-		username: "@pluwshyy",
-		href: "https://t.me/pluwshyy",
+		username: "@sharkiecafe",
+		href: "https://t.me/sharkiecafe",
 		icon: "la:telegram",
 	},
 	{
 		name: "Twitter",
-		username: "@pluwshyy",
-		href: "https://twitter.com/pluwshyy",
+		username: "@sharkiecafe",
+		href: "https://twitter.com/sharkiecafe",
 		icon: "ri:twitter-line",
 	},
 	{
