added socials page

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -37,6 +37,12 @@ const socialLinks: {
 		icon: "ri:twitter-line",
 	},
 	{
+		name: "Pronouns",
+		username: "@sharkcafe",
+		href: "https://en.pronouns.page/@sharkcafe",
+		icon: "simple-icons:pronounsdotpage",
+	},
+	{
 		name: "email",
 		username: "lulu@shark.cafe",
 		href: "mailto:lulu@shark.cafe",
